# flask_customersegmentation

./: app.py  envcheck.py  pyproject.toml  requirements.txt
static/: sample_customers.csv
templates/: eda.html  home.html  rfm.html  segmentation.html
