[tool.poetry]
name = "flaskapp2"
version = "0.0.1"
description = "Custoemr Segmentation App"
authors = ["Chandra Mohan <cmohan.biology@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
flask = "^3.1.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
